--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!--BIOGRAPHY PAGE-->
 <!DOCTYPE html>
 <html>
    <head>
@@ -8,6 +9,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
    <body>
+      <!--NAMETAG-->
       <div class="nametag">
          <h2>Student ID : 2023708837</h2>
          <h2>Name : Muhammad Haikal Rahman</h2>
