--- a/download.html
+++ b/download.html
@@ -1,6 +1,8 @@
+<!--DOWNLOAD PAGE-->
 <!DOCTYPE html>
 <html>
    <head>
+      <!--METADATA-->
       <link rel="stylesheet" href="style/download.css">
       <link rel="stylesheet" href="style/styles.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -50,6 +52,7 @@
         </div>
         <div class="item3">
             <ol>
+               <!--DOWNLOAD FILE-->
                <li>Download<a href="pdf/resume.pdf" download> resume</a></li>
                <li>Download<a href="pdf/timetable.pdf" download> Time table</a></li>
             </ol>
