--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,8 @@
+<!--GALLERY PAGE-->
 <!DOCTYPE html>
 <html>
    <head>
+      <!--METADATA-->
       <link rel="stylesheet" href="style/gallery.css">
       <link rel="stylesheet" href="style/styles.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -58,7 +60,7 @@
             <p>So why not combine your love of programming with your favorite song and take your coding to new heights? Step inside our gallery and playlist today and discover the perfect combination of beauty, inspiration, and creativity.</p>
             <h2>Audio</h2>
             <div class="gallery">
-                
+            <!--AUDIO-->
             <div class="audio-wrapper">
             <h3>Don't Stop Me Now</h3>
             <audio controls>
@@ -96,6 +98,7 @@
             </div>
         </div>
               <h2>Video</h2>
+               <!--VIDEO-->
               <div class="gallery">
                 <div class="video-wrapper">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/v5S3YGXQ85Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -113,6 +116,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/M2uO2nMT0Bk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             </div>
+               <!--IMAGES-->
               <h2>Images</h2>
               <div class="gallery">
               <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbW1pbmd8ZW58MHx8MHx8&w=1000&q=80" alt="image1" width="300">
