--- a/login.html
+++ b/login.html
@@ -1,6 +1,8 @@
+<!--LOGIN PAGE-->
 <!DOCTYPE html>
 <html>
 <head>
+    <!--METADATA-->
     <link rel="stylesheet" href="style/login.css">
     <link rel="stylesheet" href="style/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -49,6 +51,7 @@
             <h1 class="nama">Log In Form</h1>
         </div>
         <div class="item3">
+            <!--LOGIN FORM-->
             <form>
                 <table>
                   <tr>
