--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
+<!--PROJECTS PAGE-->
 <!DOCTYPE html>
 <html>
    <head>
+      <!--METADATA-->
       <link rel="stylesheet" href="style/styles.css">
       <link rel="stylesheet" href="style/projects.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
