--- a/signup.html
+++ b/signup.html
@@ -1,3 +1,4 @@
+<!--SIGNUP PAGE-->
 <!DOCTYPE html>
 <html>
    <head>
@@ -49,6 +50,7 @@
             <h1 class="nama">Registration Form</h1>
         </div>
         <div class="item3">
+           <!--FORM SIGNUP-->
             <form id="registration-form">
                 <div>
                   <label for="first-name">First Name *</label>
